@@ -59,13 +59,11 @@ public class SupportService {
         return Pair.of(contributors, publicity);
     }
 
-    public Page<EventUserDetails> getEventParticipants(Event event, PageRequest pageRequest) {
-        List<EventUserDetails> participants = transactionRepository.findByEventIdAndRole(event.getId(), EventRole.PARTICIPANT, pageRequest)
+    public List<EventUserDetails> getEventParticipants(Integer eventId, PageRequest pageRequest) {
+        return transactionRepository.findByEventIdAndRole(eventId, EventRole.PARTICIPANT, pageRequest)
                 .stream().map(transaction -> {
                     User user = transaction.getUser();
                     return new EventUserDetails(user.getId(), user.getEmail(), user.getName(), user.getDp());
-                }).collect(Collectors.toList());
-
-        return new PageImpl<>(participants, pageRequest, participants.size());
+                }).toList();
     }
 }
